@@ -50,6 +50,14 @@
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.12</version>
+                <configuration>
+                    <argLine>-XX:MaxPermSize=200m</argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
